<resources>
    <string name="app_name">InFamily</string>
    <string name="children"> О приемных детях! </string>
    <string name="parents">Для родителей</string>
    <string name="adopt">Хотите стать приемным родителем/опекуном?</string>
    <string name="category_test">Психология</string>
    <string name="link">www.androidhive.info</string>
    <string name="pcychology">Психология</string>
    <string name="test_title">Как перестать обижаться? Шесть действенных способов</string>
    <string name="test_content">Подростковый период - это период перехода от детства к юности, сопровождающийся агрессивностью, рискованным поведением, конфликтами с окружением и поисками своего «Я».

Многие родители с тревогой ждут наступления этого момента в жизни своих детей. Брать в семью подростка со сформировавшимся характером и не всегда хорошими привычками многие не решаются, боясь не справиться, но есть родители, которые считают, что с подростком легче договориться, что это уже самостоятельный человек, который может стать помощником во всех делах.

Спутать умение дружить с подростком с готовностью стать его родителем, велика. Для того, чтобы понять, сможете ли вы существовать вместе, поможет гостевой режим и Школа приемных родителей, обучение в которой обязательно для усыновителя. Знания и навыки, полученные в такой школе, бесценны.</string>
    <string name="test_string_document_title">Справка с места работы</string>
    <string name="collect_docs">Собрать документы на усыновление или опеку</string>
    <string name="client_name">ФИО</string>
    <string name="client_phone">Номер</string>
    <string name="client_email">Почта</string>
    <string name="send_files">Отправить документы</string>
    <string name="categories">Категории</string>
    <string name="articles">Статьи</string>
    <string name="article">Статья</string>
    <string name="request_setting_permissions">You have disabled some permissions, please enable them in settings</string>
    <string name="pick_photo_from_camera">Камера</string>
    <string name="pick_photo_from_gallery">Галерея</string>
    <string name="check_list">Собрать документы</string>
    <string name="use_service">Прикрепить документы на проверку</string>
    <string name="upload_image">Загрузить картинку</string>
    <string name="call">Номер</string>
    <string name="open_map">Адрес</string>
    <string name="foster">Фостерное опекунство</string>
    <string name="adoption">Усыновление</string>
    <string name="guardianship">Опекунство и попечительство</string>
    <string name="text_adopt">
6. Опекунами и попечителями могут назначаться только совершеннолетние дееспособные лица.

7. Опекунами и попечителями лиц, нуждающихся в установлении опеки и попечительства, не могут быть лица:

- страдающие "лудоманией" или зависимые от азартных игр, ограниченные судом в дееспособности;

- отстраненные от выполнения обязанностей опекунов и попечителей;

- ограниченные в родительских правах, лишенные родительских прав, бывшие усыновители, если усыновление отменено по их вине;

- лица, которые по состоянию здоровья не могут осуществлять обязанности по воспитанию несовершеннолетнего, согласно утвержденному Правительством Кыргызской Республики перечню заболеваний;

- имеющие не снятую или не погашенную в установленном законодательством порядке судимость.

Опека и попечительство устанавливаются для защиты прав и интересов недееспособных или ограниченных в дееспособности граждан. Опека и попечительство над несовершеннолетними устанавливаются также в целях их воспитания.

Разница в возрасте между опекуном (попечителем) и несовершеннолетним не может быть менее 16 лет.

При назначении опекуна или попечителя в отношении несовершеннолетнего учитываются нравственные и иные личные качества опекуна и попечителя, способность его к выполнению обязанностей опекуна и попечителя, отношения между опекуном, попечителем и ребенком, отношение к несовершеннолетнему членов семьи опекуна и попечителя, а также, если это возможно, желание самого несовершеннолетнего.

(В редакции постановления Правительства КР от 22 мая 2014 года № 270)

8. Лица, желающие быть опекунами и попечителями несовершеннолетних, обращаются в территориальное подразделение с заявлением (приложение 1) и приложением следующих документов:

1) копия паспорта (или иной удостоверяющий личность документ);

2) копия свидетельства о браке (если состоят в браке);

3) нотариально заверенное согласие супруга на опеку или попечительство (если состоят в браке);

4) справка с места жительства о составе семьи;

5) справка органов внутренних дел об отсутствии, снятии или погашении судимости;

6) документ, подтверждающий наличие постоянного источника доходов семьи (справка с места работы, с указанием должности и заработной платы, копия декларации о доходах от предпринимательской деятельности, справка исполнительных органов местного самоуправления о наличии земельной доли, живности и других активов в собственности крестьянского хозяйства);

7) медицинское заключение государственной лечебно-профилактической и медико-социальной организации о состоянии здоровья лица, желающего быть опекуном (приложение 2), и членов его семьи об отсутствии заболеваний, согласно Перечню, определяемому Правительством Кыргызской Республики, при наличии которых лицо не может быть признано приемным родителем, опекуном или попечителем;

8) характеристика с места работы либо с места жительства;

9) полная автобиография заявителя.

Документы, перечисленные в подпунктах 3-8 настоящего пункта, действительны для рассмотрения их территориальным подразделением в течение шести месяцев со дня их выдачи.

9. Лица, желающие быть опекунами и попечителями совершеннолетних недееспособных граждан, ограниченных в дееспособности граждан, представляют документы, перечисленные в подпунктах 1-4 и 7-9 пункта 8 настоящего Положения.

Бабушки и дедушки, родители, супруги, совершеннолетние дети, совершеннолетние внуки, братья и сестры совершеннолетнего недееспособного гражданина, ограниченного в дееспособности гражданина, желающие быть опекунами и попечителями, представляют документы, перечисленные в подпунктах 1, 4, 8 пункта 8 настоящего Положения.

10. Для подготовки заключения о возможности быть опекуном и попечителем несовершеннолетнего, территориальным подразделением составляется акт по результатам обследования социально-бытовых условий жизни заявителей, желающих быть опекунами и попечителями (приложение 3), в срок не более 20 календарных дней со дня подачи документов, указанных в пункте 8 настоящего Положения.
 Документы, перечисленные в подпунктах 4, 6, 7 пункта 8, действительно в течение шести месяцев со дня их выдачи.

Заключение о возможности быть опекуном и попечителем является основанием для постановки на учет территориальным подразделением лиц, желающих принять несовершеннолетних на воспитание, в Государственный банк данных о детях, оставшихся без попечения родителей, в качестве кандидатов в опекуны и попечители.

На каждого кандидата в опекуны и попечители формируется отдельное дело.

Для гражданина Кыргызской Республики, постоянно проживающего за пределами Кыргызской Республики, иностранного гражданина, желающего быть опекуном и попечителем несовершеннолетнего, заключение (о возможности быть опекуном и попечителем) компетентного органа государства, в котором он имеет постоянное место жительства, является основанием для постановки на учет в качестве кандидатов в опекуны и попечители.

Опекуном и попечителем несовершеннолетнего, являющегося гражданином Кыргызской Республики, может быть назначен гражданин другого государства, в порядке и случаях, предусмотренных международными договорами, за исключением случаев, предусмотренных Кодексом Кыргызской Республики о детях.

Бабушки и дедушки, родители, супруги, совершеннолетние дети, совершеннолетние внуки, братья и сестры совершеннолетнего подопечного, а также бабушки и дедушки, совершеннолетние братья и сестры несовершеннолетнего подопечного, вне зависимости от гражданства, имеют преимущественное право быть его опекунами или попечителями перед всеми другими лицами.

Не подлежат постановке на учет в качестве кандидатов в опекуны и попечители лица, состоящие в родственных связях с несовершеннолетними и желающие быть опекунами и попечителями несовершеннолетних, лица, желающие быть опекунами и попечителями совершеннолетних недееспособных граждан или ограниченных в дееспособности граждан, а также лица, назначаемые на временную опеку и попечительство.

11. В случае несоответствия заявителей требованиям, установленным настоящим Положением, территориальное подразделение выносит отрицательное заключение.
 ПОЛОЖЕНИЕ
об опеке и попечительстве


(В редакции постановления Правительства КР от 22 мая 2014 года № 270)</string>
    <string name="title_adopt">Порядок установления опеки и попечительства над нуждающимися в установлении опеки и попечительства лицами</string>
</resources>